--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -53,13 +53,22 @@
   <ItemGroup>
      <Compile Include="Assets\scripts\Arrive.cs" />
      <Compile Include="Assets\scripts\Boid.cs" />
+     <Compile Include="Assets\scripts\Bullet.cs" />
+     <Compile Include="Assets\scripts\ComponentController.cs" />
+     <Compile Include="Assets\scripts\EagleController.cs" />
+     <Compile Include="Assets\scripts\EagleSpawner.cs" />
      <Compile Include="Assets\scripts\EnemyManager.cs" />
      <Compile Include="Assets\scripts\FollowPath.cs" />
+     <Compile Include="Assets\scripts\HawkController.cs" />
+     <Compile Include="Assets\scripts\HawkSpawner.cs" />
      <Compile Include="Assets\scripts\OffsetPursue.cs" />
      <Compile Include="Assets\scripts\Path.cs" />
      <Compile Include="Assets\scripts\Pursue.cs" />
      <Compile Include="Assets\scripts\Seek.cs" />
+     <Compile Include="Assets\scripts\Shooting.cs" />
+     <Compile Include="Assets\scripts\StateMachine.cs" />
      <Compile Include="Assets\scripts\SteeringBehaviour.cs" />
+     <Compile Include="Assets\scripts\TakeOff.cs" />
      <Compile Include="Assets\scripts\Target.cs" />
      <Compile Include="Assets\scripts\Wander.cs" />
  <Reference Include="UnityEngine.UI">
