--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -54,6 +54,7 @@
      <Compile Include="Assets\scripts\Arrive.cs" />
      <Compile Include="Assets\scripts\Boid.cs" />
      <Compile Include="Assets\scripts\Bullet.cs" />
+     <Compile Include="Assets\scripts\CollisionController.cs" />
      <Compile Include="Assets\scripts\ComponentController.cs" />
      <Compile Include="Assets\scripts\EagleController.cs" />
      <Compile Include="Assets\scripts\EagleSpawner.cs" />
