added bullet dectection and finished attack state

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -59,6 +59,7 @@
      <Compile Include="Assets\scripts\EagleController.cs" />
      <Compile Include="Assets\scripts\EagleSpawner.cs" />
      <Compile Include="Assets\scripts\EnemyManager.cs" />
+     <Compile Include="Assets\scripts\Flee.cs" />
      <Compile Include="Assets\scripts\FollowPath.cs" />
      <Compile Include="Assets\scripts\HawkController.cs" />
      <Compile Include="Assets\scripts\HawkSpawner.cs" />
