--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -55,9 +55,11 @@
      <Compile Include="Assets\scripts\Boid.cs" />
      <Compile Include="Assets\scripts\Bullet.cs" />
      <Compile Include="Assets\scripts\CameraController.cs" />
+     <Compile Include="Assets\scripts\CameraSwitch.cs" />
      <Compile Include="Assets\scripts\CollisionController.cs" />
      <Compile Include="Assets\scripts\ComponentController.cs" />
      <Compile Include="Assets\scripts\EagleController.cs" />
+     <Compile Include="Assets\scripts\EagleFollow.cs" />
      <Compile Include="Assets\scripts\EagleSpawner.cs" />
      <Compile Include="Assets\scripts\EnemyManager.cs" />
      <Compile Include="Assets\scripts\Flee.cs" />
